Fix post link font size jump on mobile tap

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -141,7 +141,10 @@ h6 {
     font-size: 0.7rem;
   }
 
-  .post .post-link {
+  .post .post-link,
+  .post .post-link:hover,
+  .post .post-link:visited,
+  .post .post-link:active {
     font-size: 1rem;
   }
 
